// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildDiagramSpec + createDiagramCollaborator > golden snapshot: stable diagram from fixture spec 1`] = `
{
  "annularBand": {
    "center": {
      "x": 0,
      "y": 0,
    },
    "rInner": 118,
    "rOuter": 134.52,
    "sweepRad": 3.141592653589793,
    "thetaLeft": 3.141592653589793,
  },
  "brand": {
    "brandQr": {
      "cells": [
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        false,
        true,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        true,
        true,
        true,
        false,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        false,
        true,
        false,
        true,
        false,
        false,
        true,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        true,
        false,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        false,
        false,
        true,
        false,
        false,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        false,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        true,
        false,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        true,
        true,
        false,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        true,
        true,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        false,
        true,
        false,
        true,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        false,
        true,
        true,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        true,
        false,
        true,
        true,
        false,
        true,
        true,
        false,
        false,
        false,
        false,
        true,
        true,
        true,
        true,
        true,
        true,
        true,
        false,
        true,
        false,
        true,
        true,
        true,
        false,
        false,
        false,
        true,
        true,
        true,
        false,
        false,
        true,
        false,
        false,
        true,
      ],
      "moduleCount": 25,
      "moduleSize": 0.8495999999999999,
      "origin": {
        "x": -155.76000000000002,
        "y": -158.93283550303113,
      },
      "payload": "https://thetidedial.page",
    },
    "brandUrl": {
      "anchor": {
        "x": -133.104,
        "y": -157.98883550303114,
      },
      "content": "thetidedial.page",
      "fontSize": 4.72,
      "hAlign": "left",
    },
  },
  "brhcDate": {
    "anchor": {
      "x": 155.76000000000002,
      "y": -150.2008355030311,
    },
    "content": "Mon 23 Mar",
    "fontSize": 5.31,
    "hAlign": "right",
  },
  "brhcLocation": {
    "anchor": {
      "x": 155.76000000000002,
      "y": -142.53083550303108,
    },
    "content": "Lymington",
    "fontSize": 5.31,
    "hAlign": "right",
  },
  "dividorArc": {
    "radiusK": 1.32,
  },
  "hand": {
    "arm": {
      "end": {
        "x": 92.80063066946916,
        "y": -64.96461611792053,
      },
      "start": {
        "x": 9.666732361403039,
        "y": -6.767147512283389,
      },
    },
    "armTimeReadout": {
      "anchor": {
        "x": 54.61725527157779,
        "y": -31.03251563440044,
      },
      "angleRad": 5.67242915205982,
      "fontSize": 5.31,
      "nowTagContent": "time now",
      "timeContent": "19:20",
    },
    "bossCircle": {
      "center": {
        "x": 0,
        "y": 0,
      },
      "radius": 11.8,
    },
    "bossLabel": {
      "anchor": {
        "x": 0,
        "y": 0,
      },
      "content": "Tides",
      "fontSize": 5.664,
    },
    "livePulse": {
      "opacityRelativeAmplitude": 0.4,
      "periodSeconds": 4,
      "radiusRelativeAmplitude": 0.04,
    },
    "theta": 5.67242915205982,
    "timeHours": 19.33416666666667,
  },
  "homeMenuTrigger": {
    "center": {
      "x": -145.14000000000001,
      "y": -135.33283550303113,
    },
    "diameter": 21.24,
    "iconBarCenterSpacing": 2.95,
    "iconBarHalfLength": 5.31,
  },
  "mainLabel": {
    "anchor": {
      "x": 155.76000000000002,
      "y": -157.87083550303112,
    },
    "content": "High tide at 23:06",
    "fontSize": 5.31,
    "hAlign": "right",
  },
  "meta": {
    "title": "home-tide-diagram",
  },
  "paintOrder": {
    "overrides": [
      {
        "name": "Hand",
        "place": "before",
        "relativeTo": "AnnularBand",
      },
    ],
  },
  "refArc": {
    "center": {
      "x": 0,
      "y": 0,
    },
    "refRadius": 118,
    "sweepRad": 3.141592653589793,
    "thetaLeft": 3.141592653589793,
    "thetaRight": 6.283185307179586,
  },
  "tickLabels": [
    {
      "anchor": {
        "x": -124.82885671613097,
        "y": -18.79403075765778,
      },
      "content": "01",
      "fontSize": 4.72,
      "hour": 1,
      "theta": 3.2724923474893677,
    },
    {
      "anchor": {
        "x": -121.61585708475143,
        "y": -34.94687069267798,
      },
      "content": "02",
      "fontSize": 4.72,
      "hour": 2,
      "theta": 3.4033920413889427,
    },
    {
      "anchor": {
        "x": -116.32197642036607,
        "y": -50.542140235358964,
      },
      "content": "03",
      "fontSize": 4.72,
      "hour": 3,
      "theta": 3.5342917352885173,
    },
    {
      "anchor": {
        "x": -109.03779448888355,
        "y": -65.31299999999996,
      },
      "content": "04",
      "fontSize": 4.72,
      "hour": 4,
      "theta": 3.665191429188092,
    },
    {
      "anchor": {
        "x": -99.88794566270825,
        "y": -79.00671648077198,
      },
      "content": "05",
      "fontSize": 4.72,
      "hour": 5,
      "theta": 3.796091123087667,
    },
    {
      "anchor": {
        "x": -89.02898639207346,
        "y": -91.38898639207343,
      },
      "content": "06",
      "fontSize": 4.72,
      "hour": 6,
      "theta": 3.9269908169872414,
    },
    {
      "anchor": {
        "x": -76.646716480772,
        "y": -102.24794566270822,
      },
      "content": "07",
      "fontSize": 4.72,
      "hour": 7,
      "theta": 4.057890510886816,
    },
    {
      "anchor": {
        "x": -62.95300000000005,
        "y": -111.3977944888835,
      },
      "content": "08",
      "fontSize": 4.72,
      "hour": 8,
      "theta": 4.1887902047863905,
    },
    {
      "anchor": {
        "x": -48.18214023535906,
        "y": -118.68197642036603,
      },
      "content": "09",
      "fontSize": 4.72,
      "hour": 9,
      "theta": 4.319689898685965,
    },
    {
      "anchor": {
        "x": -32.586870692677955,
        "y": -123.97585708475142,
      },
      "content": "10",
      "fontSize": 4.72,
      "hour": 10,
      "theta": 4.4505895925855405,
    },
    {
      "anchor": {
        "x": -16.43403075765782,
        "y": -127.18885671613096,
      },
      "content": "11",
      "fontSize": 4.72,
      "hour": 11,
      "theta": 4.581489286485115,
    },
    {
      "anchor": {
        "x": -2.3128556984016993e-14,
        "y": -128.266,
      },
      "content": "12",
      "fontSize": 4.72,
      "hour": 12,
      "theta": 4.71238898038469,
    },
    {
      "anchor": {
        "x": 16.434030757657773,
        "y": -127.18885671613097,
      },
      "content": "13",
      "fontSize": 4.72,
      "hour": 13,
      "theta": 4.843288674284264,
    },
    {
      "anchor": {
        "x": 32.58687069267792,
        "y": -123.97585708475144,
      },
      "content": "14",
      "fontSize": 4.72,
      "hour": 14,
      "theta": 4.974188368183839,
    },
    {
      "anchor": {
        "x": 48.18214023535902,
        "y": -118.68197642036604,
      },
      "content": "15",
      "fontSize": 4.72,
      "hour": 15,
      "theta": 5.105088062083414,
    },
    {
      "anchor": {
        "x": 62.95299999999991,
        "y": -111.39779448888358,
      },
      "content": "16",
      "fontSize": 4.72,
      "hour": 16,
      "theta": 5.235987755982988,
    },
    {
      "anchor": {
        "x": 76.64671648077197,
        "y": -102.24794566270825,
      },
      "content": "17",
      "fontSize": 4.72,
      "hour": 17,
      "theta": 5.366887449882563,
    },
    {
      "anchor": {
        "x": 89.02898639207342,
        "y": -91.38898639207346,
      },
      "content": "18",
      "fontSize": 4.72,
      "hour": 18,
      "theta": 5.497787143782138,
    },
    {
      "anchor": {
        "x": 99.88794566270822,
        "y": -79.006716480772,
      },
      "content": "19",
      "fontSize": 4.72,
      "hour": 19,
      "theta": 5.6286868376817125,
    },
    {
      "anchor": {
        "x": 109.03779448888355,
        "y": -65.31299999999996,
      },
      "content": "20",
      "fontSize": 4.72,
      "hour": 20,
      "theta": 5.759586531581288,
    },
    {
      "anchor": {
        "x": 116.32197642036603,
        "y": -50.542140235359064,
      },
      "content": "21",
      "fontSize": 4.72,
      "hour": 21,
      "theta": 5.890486225480862,
    },
    {
      "anchor": {
        "x": 121.61585708475143,
        "y": -34.94687069267796,
      },
      "content": "22",
      "fontSize": 4.72,
      "hour": 22,
      "theta": 6.021385919380437,
    },
    {
      "anchor": {
        "x": 124.82885671613096,
        "y": -18.794030757657826,
      },
      "content": "23",
      "fontSize": 4.72,
      "hour": 23,
      "theta": 6.152285613280012,
    },
  ],
  "tickMarks": [
    {
      "bandOuterInward": {
        "end": {
          "x": -118,
          "y": 1.4450832229938766e-14,
        },
        "start": {
          "x": -134.52,
          "y": 1.6473948742130196e-14,
        },
      },
      "end": {
        "x": -134.52,
        "y": 1.6473948742130196e-14,
      },
      "hour": 0,
      "start": {
        "x": -118,
        "y": 1.4450832229938766e-14,
      },
      "theta": 3.141592653589793,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -130.44440041095226,
          "y": -17.173331110392155,
        },
        "start": {
          "x": -133.369162752005,
          "y": -17.558383377441306,
        },
      },
      "end": {
        "x": -119.91525598316237,
        "y": -15.787142949015205,
      },
      "hour": 1,
      "start": {
        "x": -116.99049364210964,
        "y": -15.402090681966056,
      },
      "theta": 3.2724923474893677,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -127.08686096485273,
          "y": -34.05282176413866,
        },
        "start": {
          "x": -129.93634215240547,
          "y": -34.8163379471911,
        },
      },
      "end": {
        "x": -116.8287286896628,
        "y": -31.304163505149887,
      },
      "hour": 2,
      "start": {
        "x": -113.97924750211006,
        "y": -30.540647322097453,
      },
      "theta": 3.4033920413889427,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -121.55483009251003,
          "y": -50.34965919627485,
        },
        "start": {
          "x": -124.28027471341832,
          "y": -51.47857532175186,
        },
      },
      "end": {
        "x": -111.74322945724013,
        "y": -46.28556114455758,
      },
      "hour": 3,
      "start": {
        "x": -109.01778483633184,
        "y": -45.15664501908057,
      },
      "theta": 3.5342917352885173,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -113.94296237591864,
          "y": -65.78499999999997,
        },
        "start": {
          "x": -116.49773731708272,
          "y": -67.25999999999996,
        },
      },
      "end": {
        "x": -104.74577258772787,
        "y": -60.47499999999996,
      },
      "hour": 4,
      "start": {
        "x": -102.19099764656379,
        "y": -58.999999999999964,
      },
      "theta": 3.665191429188092,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -104.38149898211783,
          "y": -80.09474121467738,
        },
        "start": {
          "x": -106.72189133597696,
          "y": -81.8905874302531,
        },
      },
      "end": {
        "x": -95.95608650822489,
        "y": -73.62969483860476,
      },
      "hour": 5,
      "start": {
        "x": -93.61569415436576,
        "y": -71.83384862302904,
      },
      "theta": 3.796091123087667,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -93.03403920071409,
          "y": -93.03403920071406,
        },
        "start": {
          "x": -95.1200042052144,
          "y": -95.12000420521437,
        },
      },
      "end": {
        "x": -85.52456518451294,
        "y": -85.52456518451291,
      },
      "hour": 6,
      "start": {
        "x": -83.43860018001263,
        "y": -83.4386001800126,
      },
      "theta": 3.9269908169872414,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -80.09474121467741,
          "y": -104.3814989821178,
        },
        "start": {
          "x": -81.89058743025313,
          "y": -106.72189133597693,
        },
      },
      "end": {
        "x": -73.62969483860478,
        "y": -95.95608650822486,
      },
      "hour": 7,
      "start": {
        "x": -71.83384862302907,
        "y": -93.61569415436573,
      },
      "theta": 4.057890510886816,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -65.78500000000007,
          "y": -113.9429623759186,
        },
        "start": {
          "x": -67.26000000000006,
          "y": -116.49773731708268,
        },
      },
      "end": {
        "x": -60.47500000000005,
        "y": -104.74577258772783,
      },
      "hour": 8,
      "start": {
        "x": -59.00000000000005,
        "y": -102.19099764656374,
      },
      "theta": 4.1887902047863905,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -50.34965919627494,
          "y": -121.55483009250999,
        },
        "start": {
          "x": -51.478575321751954,
          "y": -124.28027471341827,
        },
      },
      "end": {
        "x": -46.28556114455767,
        "y": -111.74322945724009,
      },
      "hour": 9,
      "start": {
        "x": -45.156645019080656,
        "y": -109.01778483633181,
      },
      "theta": 4.319689898685965,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -34.05282176413864,
          "y": -127.08686096485273,
        },
        "start": {
          "x": -34.81633794719108,
          "y": -129.93634215240547,
        },
      },
      "end": {
        "x": -31.304163505149866,
        "y": -116.8287286896628,
      },
      "hour": 10,
      "start": {
        "x": -30.540647322097435,
        "y": -113.97924750211006,
      },
      "theta": 4.4505895925855405,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -17.173331110392194,
          "y": -130.44440041095226,
        },
        "start": {
          "x": -17.558383377441345,
          "y": -133.369162752005,
        },
      },
      "end": {
        "x": -15.787142949015243,
        "y": -119.91525598316235,
      },
      "hour": 11,
      "start": {
        "x": -15.402090681966092,
        "y": -116.99049364210963,
      },
      "theta": 4.581489286485115,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": -2.416901690457259e-14,
          "y": -131.57000000000002,
        },
        "start": {
          "x": -2.4710923113195293e-14,
          "y": -134.52,
        },
      },
      "end": {
        "x": -2.221815455353085e-14,
        "y": -120.94999999999999,
      },
      "hour": 12,
      "start": {
        "x": -2.167624834490815e-14,
        "y": -118,
      },
      "theta": 4.71238898038469,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 17.173331110392148,
          "y": -130.44440041095226,
        },
        "start": {
          "x": 17.5583833774413,
          "y": -133.369162752005,
        },
      },
      "end": {
        "x": 15.7871429490152,
        "y": -119.91525598316237,
      },
      "hour": 13,
      "start": {
        "x": 15.40209068196605,
        "y": -116.99049364210964,
      },
      "theta": 4.843288674284264,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 34.0528217641386,
          "y": -127.08686096485275,
        },
        "start": {
          "x": 34.81633794719103,
          "y": -129.9363421524055,
        },
      },
      "end": {
        "x": 31.304163505149827,
        "y": -116.82872868966281,
      },
      "hour": 14,
      "start": {
        "x": 30.540647322097396,
        "y": -113.97924750211007,
      },
      "theta": 4.974188368183839,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 50.3496591962749,
          "y": -121.55483009251,
        },
        "start": {
          "x": 51.47857532175191,
          "y": -124.28027471341828,
        },
      },
      "end": {
        "x": 46.28556114455763,
        "y": -111.7432294572401,
      },
      "hour": 15,
      "start": {
        "x": 45.15664501908062,
        "y": -109.01778483633183,
      },
      "theta": 5.105088062083414,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 65.78499999999993,
          "y": -113.94296237591867,
        },
        "start": {
          "x": 67.25999999999992,
          "y": -116.49773731708275,
        },
      },
      "end": {
        "x": 60.474999999999916,
        "y": -104.7457725877279,
      },
      "hour": 16,
      "start": {
        "x": 58.99999999999992,
        "y": -102.1909976465638,
      },
      "theta": 5.235987755982988,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 80.09474121467737,
          "y": -104.38149898211783,
        },
        "start": {
          "x": 81.89058743025309,
          "y": -106.72189133597696,
        },
      },
      "end": {
        "x": 73.62969483860475,
        "y": -95.95608650822489,
      },
      "hour": 17,
      "start": {
        "x": 71.83384862302903,
        "y": -93.61569415436576,
      },
      "theta": 5.366887449882563,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 93.03403920071405,
          "y": -93.03403920071409,
        },
        "start": {
          "x": 95.12000420521436,
          "y": -95.1200042052144,
        },
      },
      "end": {
        "x": 85.5245651845129,
        "y": -85.52456518451294,
      },
      "hour": 18,
      "start": {
        "x": 83.43860018001259,
        "y": -83.43860018001263,
      },
      "theta": 5.497787143782138,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 104.3814989821178,
          "y": -80.09474121467741,
        },
        "start": {
          "x": 106.72189133597693,
          "y": -81.89058743025313,
        },
      },
      "end": {
        "x": 95.95608650822486,
        "y": -73.62969483860478,
      },
      "hour": 19,
      "start": {
        "x": 93.61569415436573,
        "y": -71.83384862302907,
      },
      "theta": 5.6286868376817125,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 113.94296237591864,
          "y": -65.78499999999997,
        },
        "start": {
          "x": 116.49773731708272,
          "y": -67.25999999999996,
        },
      },
      "end": {
        "x": 104.74577258772787,
        "y": -60.47499999999995,
      },
      "hour": 20,
      "start": {
        "x": 102.19099764656379,
        "y": -58.99999999999996,
      },
      "theta": 5.759586531581288,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 121.55483009250999,
          "y": -50.34965919627495,
        },
        "start": {
          "x": 124.28027471341827,
          "y": -51.47857532175196,
        },
      },
      "end": {
        "x": 111.74322945724009,
        "y": -46.285561144557676,
      },
      "hour": 21,
      "start": {
        "x": 109.01778483633181,
        "y": -45.15664501908066,
      },
      "theta": 5.890486225480862,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 127.08686096485273,
          "y": -34.05282176413865,
        },
        "start": {
          "x": 129.93634215240547,
          "y": -34.81633794719109,
        },
      },
      "end": {
        "x": 116.8287286896628,
        "y": -31.304163505149873,
      },
      "hour": 22,
      "start": {
        "x": 113.97924750211006,
        "y": -30.540647322097442,
      },
      "theta": 6.021385919380437,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 130.44440041095226,
          "y": -17.1733311103922,
        },
        "start": {
          "x": 133.369162752005,
          "y": -17.558383377441356,
        },
      },
      "end": {
        "x": 119.91525598316235,
        "y": -15.78714294901525,
      },
      "hour": 23,
      "start": {
        "x": 116.99049364210963,
        "y": -15.402090681966099,
      },
      "theta": 6.152285613280012,
    },
    {
      "bandOuterInward": {
        "end": {
          "x": 118,
          "y": -2.890166445987753e-14,
        },
        "start": {
          "x": 134.52,
          "y": -3.294789748426039e-14,
        },
      },
      "end": {
        "x": 134.52,
        "y": -3.294789748426039e-14,
      },
      "hour": 24,
      "start": {
        "x": 118,
        "y": -2.890166445987753e-14,
      },
      "theta": 6.283185307179586,
    },
  ],
  "tideMarks": [
    {
      "heightLabel": {
        "anchor": {
          "x": -133.05067107917372,
          "y": -71.48846428187923,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.1265625,
        "content": "0.94 m",
        "fontSize": 5.31,
      },
      "pointerFillStyle": "outline",
      "temporalClass": "past",
      "theta": 3.6979163526629857,
      "timeHours": 4.25,
      "timePointer": {
        "circle": {
          "center": {
            "x": -121.63555133625297,
            "y": -75.63784638581645,
          },
          "radius": 2.245031991499648,
        },
        "triangle": {
          "v1": {
            "x": -116.73982389445881,
            "y": -72.59348742890607,
          },
          "v2": {
            "x": -119.80118597296031,
            "y": -76.93216951270905,
          },
          "v3": {
            "x": -121.9850754135845,
            "y": -73.42018961295406,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": -33.97852994965313,
          "y": -147.16841068130253,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.1265625,
        "content": "4.70 m",
        "fontSize": 5.31,
      },
      "pointerFillStyle": "filled",
      "temporalClass": "past",
      "theta": 4.548764363010221,
      "timeHours": 10.75,
      "timePointer": {
        "circle": {
          "center": {
            "x": -23.332347876111314,
            "y": -141.32194697691764,
          },
          "radius": 2.2450319914996557,
        },
        "triangle": {
          "v1": {
            "x": -22.393240727554144,
            "y": -135.63385886170832,
          },
          "v2": {
            "x": -21.149743099921245,
            "y": -140.79620461243746,
          },
          "v3": {
            "x": -25.23012775493985,
            "y": -140.12253037941272,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": 84.02124999339337,
          "y": -125.51299195520635,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.1265625,
        "content": "0.89 m",
        "fontSize": 5.31,
      },
      "pointerFillStyle": "outline",
      "temporalClass": "past",
      "theta": 5.365578452943567,
      "timeHours": 16.99,
      "timePointer": {
        "circle": {
          "center": {
            "x": 87.04717449917175,
            "y": -113.75007941302434,
          },
          "radius": 2.2450319914996473,
        },
        "triangle": {
          "v1": {
            "x": 83.5435997938773,
            "y": -109.17173550640507,
          },
          "v2": {
            "x": 88.15802059228638,
            "y": -111.79913359105264,
          },
          "v3": {
            "x": 84.87371770464034,
            "y": -114.31244424581712,
          },
        },
      },
    },
    {
      "heightLabel": {
        "anchor": {
          "x": 148.57016229645046,
          "y": -27.202729186726188,
        },
        "arcCenter": {
          "x": 0,
          "y": 0,
        },
        "arcSweepRad": 0.1265625,
        "content": "4.80 m",
        "fontSize": 5.31,
      },
      "pointerFillStyle": "filled",
      "temporalClass": "future",
      "theta": 6.165375582669969,
      "timeHours": 23.1,
      "timePointer": {
        "circle": {
          "center": {
            "x": 142.2422503192472,
            "y": -16.83547976373741,
          },
          "radius": 2.2450319914996397,
        },
        "triangle": {
          "v1": {
            "x": 136.5171207775937,
            "y": -16.157866028528943,
          },
          "v2": {
            "x": 141.61709880031077,
            "y": -14.679243640018974,
          },
          "v3": {
            "x": 141.1310084600818,
            "y": -18.78620018791291,
          },
        },
      },
    },
  ],
  "version": 1,
}
`;

exports[`buildDiagramSpec + createDiagramCollaborator > golden snapshot: stable scene from fixture spec 1`] = `
{
  "meta": {
    "previewFrame": {
      "maxX": 156.76000000000002,
      "maxY": 13.272000000000002,
      "minX": -156.76000000000002,
      "minY": -159.93283550303113,
    },
    "title": "home-tide-diagram",
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "center": {
                  "x": 0,
                  "y": 0,
                },
                "kind": "circle",
                "radius": 11.8,
                "radiusOscillation": {
                  "opacityRelativeAmplitude": 0.4,
                  "periodSeconds": 4,
                  "relativeAmplitude": 0.04,
                },
              },
            ],
            "kind": "group",
            "name": "BossCircle",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": 0,
                  "y": 0,
                },
                "angleRad": 0,
                "content": "Tides",
                "dominantBaseline": "middle",
                "hAlign": "center",
                "kind": "text",
                "size": 5.664,
              },
            ],
            "kind": "group",
            "name": "BossLabel",
          },
          {
            "children": [
              {
                "end": {
                  "x": 92.80063066946916,
                  "y": -64.96461611792053,
                },
                "kind": "line",
                "start": {
                  "x": 9.666732361403039,
                  "y": -6.767147512283389,
                },
              },
              {
                "children": [
                  {
                    "children": [
                      {
                        "anchor": {
                          "x": 36.34713110852606,
                          "y": -18.24260683618484,
                        },
                        "angleRad": 5.67242915205982,
                        "content": "time now",
                        "dominantBaseline": "middle",
                        "hAlign": "left",
                        "kind": "text",
                        "size": 5.31,
                      },
                    ],
                    "kind": "group",
                    "name": "Hand.TimeReadoutNowTag",
                  },
                  {
                    "anchor": {
                      "x": 59.837290746735434,
                      "y": -34.68677529103347,
                    },
                    "angleRad": 5.67242915205982,
                    "content": "19:20",
                    "dominantBaseline": "middle",
                    "hAlign": "left",
                    "kind": "text",
                    "size": 5.31,
                  },
                ],
                "kind": "group",
                "name": "Hand.TimeReadout",
              },
            ],
            "kind": "group",
            "name": "Arm",
          },
        ],
        "kind": "group",
        "name": "Hand",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "fillOnly": true,
            "kind": "annularSector",
            "rInner": 118,
            "rOuter": 134.52,
            "sweepRad": 3.141592653589793,
            "thetaStart": 3.141592653589793,
          },
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -134.52,
              "y": 1.6473948742130196e-14,
            },
            "sweepRad": 3.141592653589793,
          },
          {
            "end": {
              "x": -134.52,
              "y": 1.6473948742130196e-14,
            },
            "kind": "line",
            "start": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
          },
          {
            "end": {
              "x": 134.52,
              "y": -3.294789748426039e-14,
            },
            "kind": "line",
            "start": {
              "x": 118,
              "y": -2.890166445987753e-14,
            },
          },
        ],
        "kind": "group",
        "name": "AnnularBand",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -118,
              "y": 1.4450832229938766e-14,
            },
            "sweepRad": 3.141592653589793,
          },
        ],
        "kind": "group",
        "name": "RefArc",
      },
      {
        "children": [
          {
            "center": {
              "x": 0,
              "y": 0,
            },
            "kind": "arc",
            "start": {
              "x": -155.76000000000002,
              "y": 1.9075098543519176e-14,
            },
            "sweepRad": 3.141592653589793,
          },
        ],
        "kind": "group",
        "name": "Dividor",
      },
      {
        "children": [
          {
            "children": [
              {
                "end": {
                  "x": -134.52,
                  "y": 1.6473948742130196e-14,
                },
                "kind": "line",
                "start": {
                  "x": -118,
                  "y": 1.4450832229938766e-14,
                },
              },
              {
                "end": {
                  "x": -118,
                  "y": 1.4450832229938766e-14,
                },
                "kind": "line",
                "start": {
                  "x": -134.52,
                  "y": 1.6473948742130196e-14,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark.Endpoint",
          },
          {
            "children": [
              {
                "end": {
                  "x": -119.91525598316237,
                  "y": -15.787142949015205,
                },
                "kind": "line",
                "start": {
                  "x": -116.99049364210964,
                  "y": -15.402090681966056,
                },
              },
              {
                "end": {
                  "x": -130.44440041095226,
                  "y": -17.173331110392155,
                },
                "kind": "line",
                "start": {
                  "x": -133.369162752005,
                  "y": -17.558383377441306,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -116.8287286896628,
                  "y": -31.304163505149887,
                },
                "kind": "line",
                "start": {
                  "x": -113.97924750211006,
                  "y": -30.540647322097453,
                },
              },
              {
                "end": {
                  "x": -127.08686096485273,
                  "y": -34.05282176413866,
                },
                "kind": "line",
                "start": {
                  "x": -129.93634215240547,
                  "y": -34.8163379471911,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -111.74322945724013,
                  "y": -46.28556114455758,
                },
                "kind": "line",
                "start": {
                  "x": -109.01778483633184,
                  "y": -45.15664501908057,
                },
              },
              {
                "end": {
                  "x": -121.55483009251003,
                  "y": -50.34965919627485,
                },
                "kind": "line",
                "start": {
                  "x": -124.28027471341832,
                  "y": -51.47857532175186,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -104.74577258772787,
                  "y": -60.47499999999996,
                },
                "kind": "line",
                "start": {
                  "x": -102.19099764656379,
                  "y": -58.999999999999964,
                },
              },
              {
                "end": {
                  "x": -113.94296237591864,
                  "y": -65.78499999999997,
                },
                "kind": "line",
                "start": {
                  "x": -116.49773731708272,
                  "y": -67.25999999999996,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -95.95608650822489,
                  "y": -73.62969483860476,
                },
                "kind": "line",
                "start": {
                  "x": -93.61569415436576,
                  "y": -71.83384862302904,
                },
              },
              {
                "end": {
                  "x": -104.38149898211783,
                  "y": -80.09474121467738,
                },
                "kind": "line",
                "start": {
                  "x": -106.72189133597696,
                  "y": -81.8905874302531,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -85.52456518451294,
                  "y": -85.52456518451291,
                },
                "kind": "line",
                "start": {
                  "x": -83.43860018001263,
                  "y": -83.4386001800126,
                },
              },
              {
                "end": {
                  "x": -93.03403920071409,
                  "y": -93.03403920071406,
                },
                "kind": "line",
                "start": {
                  "x": -95.1200042052144,
                  "y": -95.12000420521437,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark.Quarter",
          },
          {
            "children": [
              {
                "end": {
                  "x": -73.62969483860478,
                  "y": -95.95608650822486,
                },
                "kind": "line",
                "start": {
                  "x": -71.83384862302907,
                  "y": -93.61569415436573,
                },
              },
              {
                "end": {
                  "x": -80.09474121467741,
                  "y": -104.3814989821178,
                },
                "kind": "line",
                "start": {
                  "x": -81.89058743025313,
                  "y": -106.72189133597693,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -60.47500000000005,
                  "y": -104.74577258772783,
                },
                "kind": "line",
                "start": {
                  "x": -59.00000000000005,
                  "y": -102.19099764656374,
                },
              },
              {
                "end": {
                  "x": -65.78500000000007,
                  "y": -113.9429623759186,
                },
                "kind": "line",
                "start": {
                  "x": -67.26000000000006,
                  "y": -116.49773731708268,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -46.28556114455767,
                  "y": -111.74322945724009,
                },
                "kind": "line",
                "start": {
                  "x": -45.156645019080656,
                  "y": -109.01778483633181,
                },
              },
              {
                "end": {
                  "x": -50.34965919627494,
                  "y": -121.55483009250999,
                },
                "kind": "line",
                "start": {
                  "x": -51.478575321751954,
                  "y": -124.28027471341827,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -31.304163505149866,
                  "y": -116.8287286896628,
                },
                "kind": "line",
                "start": {
                  "x": -30.540647322097435,
                  "y": -113.97924750211006,
                },
              },
              {
                "end": {
                  "x": -34.05282176413864,
                  "y": -127.08686096485273,
                },
                "kind": "line",
                "start": {
                  "x": -34.81633794719108,
                  "y": -129.93634215240547,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -15.787142949015243,
                  "y": -119.91525598316235,
                },
                "kind": "line",
                "start": {
                  "x": -15.402090681966092,
                  "y": -116.99049364210963,
                },
              },
              {
                "end": {
                  "x": -17.173331110392194,
                  "y": -130.44440041095226,
                },
                "kind": "line",
                "start": {
                  "x": -17.558383377441345,
                  "y": -133.369162752005,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": -2.221815455353085e-14,
                  "y": -120.94999999999999,
                },
                "kind": "line",
                "start": {
                  "x": -2.167624834490815e-14,
                  "y": -118,
                },
              },
              {
                "end": {
                  "x": -2.416901690457259e-14,
                  "y": -131.57000000000002,
                },
                "kind": "line",
                "start": {
                  "x": -2.4710923113195293e-14,
                  "y": -134.52,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark.Quarter",
          },
          {
            "children": [
              {
                "end": {
                  "x": 15.7871429490152,
                  "y": -119.91525598316237,
                },
                "kind": "line",
                "start": {
                  "x": 15.40209068196605,
                  "y": -116.99049364210964,
                },
              },
              {
                "end": {
                  "x": 17.173331110392148,
                  "y": -130.44440041095226,
                },
                "kind": "line",
                "start": {
                  "x": 17.5583833774413,
                  "y": -133.369162752005,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 31.304163505149827,
                  "y": -116.82872868966281,
                },
                "kind": "line",
                "start": {
                  "x": 30.540647322097396,
                  "y": -113.97924750211007,
                },
              },
              {
                "end": {
                  "x": 34.0528217641386,
                  "y": -127.08686096485275,
                },
                "kind": "line",
                "start": {
                  "x": 34.81633794719103,
                  "y": -129.9363421524055,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 46.28556114455763,
                  "y": -111.7432294572401,
                },
                "kind": "line",
                "start": {
                  "x": 45.15664501908062,
                  "y": -109.01778483633183,
                },
              },
              {
                "end": {
                  "x": 50.3496591962749,
                  "y": -121.55483009251,
                },
                "kind": "line",
                "start": {
                  "x": 51.47857532175191,
                  "y": -124.28027471341828,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 60.474999999999916,
                  "y": -104.7457725877279,
                },
                "kind": "line",
                "start": {
                  "x": 58.99999999999992,
                  "y": -102.1909976465638,
                },
              },
              {
                "end": {
                  "x": 65.78499999999993,
                  "y": -113.94296237591867,
                },
                "kind": "line",
                "start": {
                  "x": 67.25999999999992,
                  "y": -116.49773731708275,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 73.62969483860475,
                  "y": -95.95608650822489,
                },
                "kind": "line",
                "start": {
                  "x": 71.83384862302903,
                  "y": -93.61569415436576,
                },
              },
              {
                "end": {
                  "x": 80.09474121467737,
                  "y": -104.38149898211783,
                },
                "kind": "line",
                "start": {
                  "x": 81.89058743025309,
                  "y": -106.72189133597696,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 85.5245651845129,
                  "y": -85.52456518451294,
                },
                "kind": "line",
                "start": {
                  "x": 83.43860018001259,
                  "y": -83.43860018001263,
                },
              },
              {
                "end": {
                  "x": 93.03403920071405,
                  "y": -93.03403920071409,
                },
                "kind": "line",
                "start": {
                  "x": 95.12000420521436,
                  "y": -95.1200042052144,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark.Quarter",
          },
          {
            "children": [
              {
                "end": {
                  "x": 95.95608650822486,
                  "y": -73.62969483860478,
                },
                "kind": "line",
                "start": {
                  "x": 93.61569415436573,
                  "y": -71.83384862302907,
                },
              },
              {
                "end": {
                  "x": 104.3814989821178,
                  "y": -80.09474121467741,
                },
                "kind": "line",
                "start": {
                  "x": 106.72189133597693,
                  "y": -81.89058743025313,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 104.74577258772787,
                  "y": -60.47499999999995,
                },
                "kind": "line",
                "start": {
                  "x": 102.19099764656379,
                  "y": -58.99999999999996,
                },
              },
              {
                "end": {
                  "x": 113.94296237591864,
                  "y": -65.78499999999997,
                },
                "kind": "line",
                "start": {
                  "x": 116.49773731708272,
                  "y": -67.25999999999996,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 111.74322945724009,
                  "y": -46.285561144557676,
                },
                "kind": "line",
                "start": {
                  "x": 109.01778483633181,
                  "y": -45.15664501908066,
                },
              },
              {
                "end": {
                  "x": 121.55483009250999,
                  "y": -50.34965919627495,
                },
                "kind": "line",
                "start": {
                  "x": 124.28027471341827,
                  "y": -51.47857532175196,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 116.8287286896628,
                  "y": -31.304163505149873,
                },
                "kind": "line",
                "start": {
                  "x": 113.97924750211006,
                  "y": -30.540647322097442,
                },
              },
              {
                "end": {
                  "x": 127.08686096485273,
                  "y": -34.05282176413865,
                },
                "kind": "line",
                "start": {
                  "x": 129.93634215240547,
                  "y": -34.81633794719109,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 119.91525598316235,
                  "y": -15.78714294901525,
                },
                "kind": "line",
                "start": {
                  "x": 116.99049364210963,
                  "y": -15.402090681966099,
                },
              },
              {
                "end": {
                  "x": 130.44440041095226,
                  "y": -17.1733311103922,
                },
                "kind": "line",
                "start": {
                  "x": 133.369162752005,
                  "y": -17.558383377441356,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark",
          },
          {
            "children": [
              {
                "end": {
                  "x": 134.52,
                  "y": -3.294789748426039e-14,
                },
                "kind": "line",
                "start": {
                  "x": 118,
                  "y": -2.890166445987753e-14,
                },
              },
              {
                "end": {
                  "x": 118,
                  "y": -2.890166445987753e-14,
                },
                "kind": "line",
                "start": {
                  "x": 134.52,
                  "y": -3.294789748426039e-14,
                },
              },
            ],
            "kind": "group",
            "name": "TickMark.Endpoint",
          },
        ],
        "kind": "group",
        "name": "TickMark",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": -121.63555133625297,
                      "y": -75.63784638581645,
                    },
                    "headSweepRad": -3.9415926535897916,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": -116.73982389445881,
                      "y": -72.59348742890607,
                    },
                    "v2": {
                      "x": -119.80118597296031,
                      "y": -76.93216951270905,
                    },
                    "v3": {
                      "x": -121.9850754135845,
                      "y": -73.42018961295406,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerOutline",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "0.94 m",
                    "kind": "arcText",
                    "radius": 151.04,
                    "size": 5.31,
                    "sweepRad": 0.1265625,
                    "thetaStart": -2.648550204516601,
                  },
                ],
                "kind": "group",
                "name": "HeightLabel",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": -23.332347876111314,
                      "y": -141.32194697691764,
                    },
                    "headSweepRad": -3.941592653589788,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": -22.393240727554144,
                      "y": -135.63385886170832,
                    },
                    "v2": {
                      "x": -21.149743099921245,
                      "y": -140.79620461243746,
                    },
                    "v3": {
                      "x": -25.23012775493985,
                      "y": -140.12253037941272,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerFilled",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "4.70 m",
                    "kind": "arcText",
                    "radius": 151.03999999999996,
                    "size": 5.31,
                    "sweepRad": 0.1265625,
                    "thetaStart": -1.7977021941693654,
                  },
                ],
                "kind": "group",
                "name": "HeightLabel",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": 87.04717449917175,
                      "y": -113.75007941302434,
                    },
                    "headSweepRad": -3.941592653589793,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": 83.5435997938773,
                      "y": -109.17173550640507,
                    },
                    "v2": {
                      "x": 88.15802059228638,
                      "y": -111.79913359105264,
                    },
                    "v3": {
                      "x": 84.87371770464034,
                      "y": -114.31244424581712,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerOutline",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "0.89 m",
                    "kind": "arcText",
                    "radius": 151.04,
                    "size": 5.31,
                    "sweepRad": 0.1265625,
                    "thetaStart": -0.9808881042360194,
                  },
                ],
                "kind": "group",
                "name": "HeightLabel",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "headCenter": {
                      "x": 142.2422503192472,
                      "y": -16.83547976373741,
                    },
                    "headSweepRad": -3.9415926535897894,
                    "kind": "timePointerPath",
                    "v1": {
                      "x": 136.5171207775937,
                      "y": -16.157866028528943,
                    },
                    "v2": {
                      "x": 141.61709880031077,
                      "y": -14.679243640018974,
                    },
                    "v3": {
                      "x": 141.1310084600818,
                      "y": -18.78620018791291,
                    },
                  },
                ],
                "kind": "group",
                "name": "TimePointerFilled",
              },
              {
                "children": [
                  {
                    "center": {
                      "x": 0,
                      "y": 0,
                    },
                    "content": "4.80 m",
                    "kind": "arcText",
                    "radius": 151.04,
                    "size": 5.31,
                    "sweepRad": 0.1265625,
                    "thetaStart": -0.18109097450961747,
                  },
                ],
                "kind": "group",
                "name": "HeightLabel",
              },
            ],
            "kind": "group",
            "name": "TideMark",
          },
        ],
        "kind": "group",
        "name": "TideMarks",
      },
      {
        "children": [
          {
            "anchor": {
              "x": -124.82885671613097,
              "y": -18.79403075765778,
            },
            "angleRad": 0,
            "content": "01",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -121.61585708475143,
              "y": -34.94687069267798,
            },
            "angleRad": 0,
            "content": "02",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -116.32197642036607,
              "y": -50.542140235358964,
            },
            "angleRad": 0,
            "content": "03",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -109.03779448888355,
              "y": -65.31299999999996,
            },
            "angleRad": 0,
            "content": "04",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -99.88794566270825,
              "y": -79.00671648077198,
            },
            "angleRad": 0,
            "content": "05",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -89.02898639207346,
              "y": -91.38898639207343,
            },
            "angleRad": 0,
            "content": "06",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -76.646716480772,
              "y": -102.24794566270822,
            },
            "angleRad": 0,
            "content": "07",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -62.95300000000005,
              "y": -111.3977944888835,
            },
            "angleRad": 0,
            "content": "08",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -48.18214023535906,
              "y": -118.68197642036603,
            },
            "angleRad": 0,
            "content": "09",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -32.586870692677955,
              "y": -123.97585708475142,
            },
            "angleRad": 0,
            "content": "10",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -16.43403075765782,
              "y": -127.18885671613096,
            },
            "angleRad": 0,
            "content": "11",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": -2.3128556984016993e-14,
              "y": -128.266,
            },
            "angleRad": 0,
            "content": "12",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 16.434030757657773,
              "y": -127.18885671613097,
            },
            "angleRad": 0,
            "content": "13",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 32.58687069267792,
              "y": -123.97585708475144,
            },
            "angleRad": 0,
            "content": "14",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 48.18214023535902,
              "y": -118.68197642036604,
            },
            "angleRad": 0,
            "content": "15",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 62.95299999999991,
              "y": -111.39779448888358,
            },
            "angleRad": 0,
            "content": "16",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 76.64671648077197,
              "y": -102.24794566270825,
            },
            "angleRad": 0,
            "content": "17",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 89.02898639207342,
              "y": -91.38898639207346,
            },
            "angleRad": 0,
            "content": "18",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 99.88794566270822,
              "y": -79.006716480772,
            },
            "angleRad": 0,
            "content": "19",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 109.03779448888355,
              "y": -65.31299999999996,
            },
            "angleRad": 0,
            "content": "20",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 116.32197642036603,
              "y": -50.542140235359064,
            },
            "angleRad": 0,
            "content": "21",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 121.61585708475143,
              "y": -34.94687069267796,
            },
            "angleRad": 0,
            "content": "22",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
          {
            "anchor": {
              "x": 124.82885671613096,
              "y": -18.794030757657826,
            },
            "angleRad": 0,
            "content": "23",
            "hAlign": "center",
            "kind": "text",
            "size": 4.72,
          },
        ],
        "kind": "group",
        "name": "TickLabel",
      },
      {
        "children": [
          {
            "children": [
              {
                "anchor": {
                  "x": 155.76000000000002,
                  "y": -157.87083550303112,
                },
                "angleRad": 0,
                "content": "High tide at 23:06",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "MainLabel",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": 155.76000000000002,
                  "y": -150.2008355030311,
                },
                "angleRad": 0,
                "content": "Mon 23 Mar",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "BRHCDate",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": 155.76000000000002,
                  "y": -142.53083550303108,
                },
                "angleRad": 0,
                "content": "Lymington",
                "hAlign": "right",
                "kind": "text",
                "size": 5.31,
              },
            ],
            "kind": "group",
            "name": "BRHCLocation",
          },
        ],
        "kind": "group",
        "name": "BRHCBundle",
      },
      {
        "children": [
          {
            "children": [
              {
                "cells": [
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  false,
                  false,
                  false,
                  false,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  false,
                  true,
                  true,
                  false,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  true,
                  false,
                  true,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  false,
                  true,
                  true,
                  true,
                  false,
                  false,
                  true,
                  false,
                  false,
                  true,
                ],
                "kind": "qrMatrix",
                "moduleCount": 25,
                "moduleSize": 0.8495999999999999,
                "origin": {
                  "x": -155.76000000000002,
                  "y": -158.93283550303113,
                },
              },
            ],
            "kind": "group",
            "name": "BrandQR",
          },
          {
            "children": [
              {
                "anchor": {
                  "x": -133.104,
                  "y": -157.98883550303114,
                },
                "angleRad": 0,
                "content": "thetidedial.page",
                "hAlign": "left",
                "kind": "text",
                "size": 4.72,
              },
            ],
            "kind": "group",
            "name": "BrandURL",
          },
        ],
        "kind": "group",
        "name": "Brand",
      },
      {
        "children": [
          {
            "center": {
              "x": -145.14000000000001,
              "y": -135.33283550303113,
            },
            "height": 21.24,
            "kind": "roundedRect",
            "rx": 10.62,
            "width": 21.24,
          },
          {
            "children": [
              {
                "end": {
                  "x": -139.83,
                  "y": -132.38283550303115,
                },
                "kind": "line",
                "start": {
                  "x": -150.45000000000002,
                  "y": -132.38283550303115,
                },
              },
              {
                "end": {
                  "x": -139.83,
                  "y": -135.33283550303113,
                },
                "kind": "line",
                "start": {
                  "x": -150.45000000000002,
                  "y": -135.33283550303113,
                },
              },
              {
                "end": {
                  "x": -139.83,
                  "y": -138.28283550303112,
                },
                "kind": "line",
                "start": {
                  "x": -150.45000000000002,
                  "y": -138.28283550303112,
                },
              },
            ],
            "kind": "group",
            "name": "HomeMenuTriggerIcon",
          },
        ],
        "kind": "group",
        "name": "HomeMenuTrigger",
      },
    ],
    "kind": "group",
    "name": "tideDiagram",
  },
  "version": 2,
}
`;
